﻿[COLOR yellow][B]v4.6.8[/B][/COLOR]
* Create dedicated generic function for extracting season/episode numbers from subtitle file name.
* Apply "extract_season_episode_numbers" function on Subscene + SubSource websites (more matches).
[COLOR yellow][B]v4.6.7[/B][/COLOR]
* auto remove HI (Hearing Impaired) subtitle tags: Rewrite code & bug fixes.
[COLOR yellow][B]v4.6.6[/B][/COLOR]
* Remove "pause" setting (השהה וידאו בזמן חיפוש כתוביות).
[COLOR yellow][B]v4.6.5[/B][/COLOR]
* auto remove HI (Hearing Impaired) subtitle tags: Limit to run on actual HI subtitles only.
[COLOR yellow][B]v4.6.4[/B][/COLOR]
* Add auto remove HI (Hearing Impaired) subtitle tags setting.
[COLOR yellow][B]v4.6.3[/B][/COLOR]
* Change Subscene site domain from Subscene.best to Subscene.cam + Fix download.
[COLOR yellow][B]v4.6.2[/B][/COLOR]
* Deprecate SubDL source, will be brought back in the future if will be relevant.
[COLOR yellow][B]v4.6.1[/B][/COLOR]
* Add Bing Web machine translate source (https://www.bing.com/Translator).
* Hebrew punctuation fix - Remove <i> tags from text.
[COLOR yellow][B]v4.6.0[/B][/COLOR]
* Hebrew punctuation fix - Improve performance and accuracy, handle all hyphen edge cases (engine.py).
[COLOR yellow][B]v4.5.9[/B][/COLOR]
* Add [COLOR aquamarine]Subscene[/COLOR] website source (https://subscene.best).
* OpenSubtitles - Fix languages codes incorrect usage from addon settings.
[COLOR yellow][B]v4.5.8[/B][/COLOR]
* Switch to cleaner addon icon using Leonardo.AI image generator (https://leonardo.ai).
* get_playing_filename - Remove file extension removal (general.py)
* Refactor sort_subtitles function clean string and add remove file extension (engine.py).
* Rewrite Hebrew punctuation fix and handle edge cases (engine.py).
[COLOR yellow][B]v4.5.7[/B][/COLOR]
* Rename "time_s" setting name to "max_search_time".
* use "max_search_time" setting value for DEFAULT_REQUEST_TIMEOUT (general.py).
[COLOR yellow][B]v4.5.6[/B][/COLOR]