@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.All_Subs" name="DarkSubs" version="4.6.8" provider-name="Sbs">
+<addon id="service.subtitles.All_Subs" name="DarkSubs" version="4.6.9" provider-name="Sbs">
   <requires>
     <import addon="script.module.requests" version="2.9.1" />
     <import addon="script.module.chardet" />
