@@ -14,19 +14,20 @@
 	</category>
 	
 	<category label="שפות">
-	
-		<setting label="הפעל כדי לחפש בכל השפות (כולל עברית!)" type="lsep"/>
+		
+		<setting label="תרגום מכונה" type="lsep"/>
+		<setting id="auto_translate" label="הפעל תרגום מכונה" type="bool" default="true" />
+		<setting id="translate_p" type="enum" label="מקור תרגום" values="Google Translate|Bing Web|Yandex" default="0" visible="eq(-1,true)"/>
+		
+		<setting label="הפעל כדי לחפש בכל השפות" type="lsep"/>
 		<setting id="all_lang" label="חפש בכל השפות" type="bool" default="false" />
+		<setting id="retry_search_with_all_langs" type="bool" default="true" label="חפש כתוביות שוב בכל השפות במידה ואין תוצאות" visible="eq(-1,false)"/>
 		
 		<setting label="שפות נפוצות" type="lsep"/>
 		<setting id="language_hebrew" label="עברית" type="bool" default="true" />
 		<setting id="language_english" label="אנגלית" type="bool" default="true" />
 		<setting id="language_russian" label="רוסית" type="bool" default="false" />
 		<setting id="language_arab" label="ערבית" type="bool" default="false" />
-		
-		<setting label="תרגום מכונה" type="lsep"/>
-		<setting id="auto_translate" label="הפעל תרגום מכונה" type="bool" default="true" />
-		<setting id="translate_p" type="enum" label="מקור תרגום" values="Google Translate|Bing Web|Yandex" default="0" visible="eq(-1,true)"/>
 		
 		<setting label="שפות נוספות (הגדר קוד שפה על פי הקישור למטה)" type="lsep"/>
 		<setting id="other_lang" label="שפות נוספות" type="text" default="" />
