@@ -359,7 +359,7 @@ def build_download_request(subtitle_id):
     return request
 #####################################################################################
 
-def get_subs(video_data):
+def get_subs(video_data, all_lang_override=False):
 
     # For settings changes to take effect.
     Addon=xbmcaddon.Addon()
@@ -388,7 +388,7 @@ def get_subs(video_data):
          all_lang=Addon.getSetting("other_lang").split(",")
          for items in all_lang:
             selected_lang.append(items)
-    if Addon.getSetting("all_lang")=='true':
+    if Addon.getSetting("all_lang")=='true' or all_lang_override:
         selected_lang=['ALL']
     else:
         # Map language codes to language names from all_lang_codes
