@@ -1,4 +1,6 @@
-﻿[COLOR yellow][B]v4.6.8[/B][/COLOR]
+﻿[COLOR yellow][B]v4.6.9[/B][/COLOR]
+* Add "חפש כתוביות שוב בכל השפות במידה ואין תוצאות" setting. This will re-search for subtitles with all_lang=true (כל השפות) if no subs found on first search. the setting will take effect only if all_lang (חפש בכל השפות) is configured as OFF.
+[COLOR yellow][B]v4.6.8[/B][/COLOR]
 * Create dedicated generic function for extracting season/episode numbers from subtitle file name.
 * Apply "extract_season_episode_numbers" function on Subscene + SubSource websites (more matches).
 [COLOR yellow][B]v4.6.7[/B][/COLOR]
